<resources>
    <string name="app_name">QR_Device_Scanner</string>
    <string name="toolbarTitle">Quay lại</string>
    <string name="inventory">Kiểm Kê</string>
    <string name="status_valuation">Tình Trạng</string>
    <string name="search">Search</string>
    <string name="warehouse">Nhà Kho</string>
    <string name="sub_device">Sub-Device</string>
    <string name="device">Device</string>
    <string name="name">Name</string>
    <string name="parentcode">Parent Code</string>
    <string name="origin">Origin</string>
    <string name="dateofproduce">Date of produce</string>
    <string name="staff">Staff</string>
    <string name="digital">Digital</string>
    <string-array name="spinner_list_item_array">
        <item>English</item>
        <item>French</item>
        <item>Singapore</item>
        <item>Japan</item>
    </string-array>
    <string name="title_activity_ware_house">WareHouse</string>
    <string name="qrscanner">Quét Mã QR</string>
    <string name="actual_number">Số lượng thực tế</string>
    <string name="name_device_inventory">Tên thiết bị</string>
    <string name="note">Ghi chú</string>
    <string name="status_device">Tình trạng:</string>
    <string name="normal_status">Bình thường</string>
    <string name="broken_status">Hỏng</string>
    <string name="unuseded_status">Xin thanh lí</string>
    <string name="success_submit_per_room">Tất cả thông tin kiểm kê đã được lưu thành công. Chọn phòng thực hành khác để kiểm kê.</string>
    <string name="success_submit_per_device">Lưu thông tin kiểm kê thành công. Quét mã QR để tiếp tục thực hiện kiểm kê</string>
    <string name="success">Thành Công</string>
    <string name="fail">Thất Bại</string>
    <string name="fail_submit">Bạn chưa nhập thông tin kiểm kê. Vui lòng kiểm tra lại</string>
    <string name="season">Chọn Đợt Kiểm Kê</string>
    <string name="title_activity_test">Test</string>
    <string name="inventory_equipment">Kiểm kê </string>
    <string name="guide">Sử dụng </string>
    <string name="evaluation">Đánh giá tình trạng</string>
</resources>
