<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_shape"
            android:gravity="center_horizontal">
            <TextView
                android:text="@string/name"
                android:textSize="16dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="right"
                android:padding="4dp"/>
            <TextView
                android:id="@+id/nameDevice"
                android:textSize="18dp"
                android:textColor="#146FA4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="4dp"/>
        </TableRow>
        <!-- Row 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_shape"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/parentcode"
                android:textSize="16dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="right"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/parentCode"
                android:textSize="18dp"
                android:textColor="#146FA4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="4dp"/>
        </TableRow>
        <!-- Row 3 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_shape"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/origin"
                android:textSize="16dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="right"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/origin"
                android:textSize="18dp"
                android:textColor="#146FA4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="4dp"/>
        </TableRow>
        <!-- Row 4 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_shape"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/dateofproduce"
                android:textSize="16dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="right"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/dateOfProduce"
                android:textSize="18dp"
                android:textColor="#146FA4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="4dp"/>
        </TableRow>
        <!-- Row 5 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_shape"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/staff"
                android:textSize="16dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="right"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/staff"
                android:textSize="18dp"
                android:textColor="#146FA4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="4dp"/>
        </TableRow>
        <!-- Row 6 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_shape"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/digital"
                android:textSize="16dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="right"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/digital"
                android:textSize="18dp"
                android:textColor="#146FA4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="4dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>