<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="40px"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/name_device_inventory"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/nameDeviceInventoryForRow"
            android:text="Dell Voutro"
            android:textColor="#9C27B0"
            android:textStyle="bold"
            android:textSize="30px"
            android:layout_marginLeft="15px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/actual_number"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edNumberOfDeviceLeft"
            android:textSize="14dp"
            android:background="@drawable/row_shape"
            android:inputType="number"
            android:hint="Số thiết bị thực tế"
            android:padding="10dp"
            android:layout_marginTop="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#1a237e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/status_device"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edNumberOfNormalDevice"
            android:textSize="14dp"
            android:hint="Số thiết bị bình thường"
            android:background="@drawable/row_shape"
            android:inputType="number"
            android:padding="10dp"
            android:layout_marginTop="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edNumberOfBrokenDevice"
            android:textSize="14dp"
            android:background="@drawable/row_shape"
            android:inputType="number"
            android:hint="Số thiết bị hỏng"
            android:layout_marginTop="14px"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edNumberOfUnusedDevice"
            android:textSize="14dp"
            android:background="@drawable/row_shape"
            android:inputType="number"
            android:hint="Số lượng xin thanh lí"
            android:padding="10dp"
            android:layout_marginTop="14px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/note"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edNoteDevice"
            android:textSize="14dp"
            android:gravity="top"
            android:background="@drawable/row_shape"
            android:padding="20dp"
            android:layout_marginTop="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvOK"
            android:text="OK"
            android:textColor="#039be5"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvCancel"
            android:text="CANCEL"
            android:textColor="#039be5"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/tvOK"
            android:layout_marginTop="15px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>